--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://www.jqueryscript.net/css/jquerysctipttop.css" rel="stylesheet" type="text/css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" />
-    <link rel="stylesheet" href="main/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
     <div class="container-fluid" style="margin:150px auto">
         <div class="row justify-content-center">
